--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ footer .content .right input[type="text"]{
   border-radius: 5px;
   padding-left: 10px;
   font-size: 17px;
-  border: 2px solid #222222;
+  border: 1.5px solid #fff;
 }
 footer .content .right input[type="submit"]{
   height: 42px;
